syntax = "proto3";
import "google/protobuf/empty.proto";
import "common.proto";  // 引入 common 包
option go_package = ".;proto";

service Role{
  rpc CreateRole(CreateRoleInfo) returns (RoleInfoResponse); // 创建角色
  rpc UpdateRole(UpdateRoleInfo) returns (google.protobuf.Empty);// 更新用户信息
  rpc GetRoleList(RoleFilterPageInfo) returns (RoleListResponse); //角色列表
}

//message PageInfo {
//  uint32 page = 1;  // 页码
//  uint32 size = 2;  // 每页大小
//}


message CreateRoleInfo{
  string name = 1;
  string remark = 2;
  bool status = 3;
}

message RoleInfoResponse{
  int64 id = 1;
  string name = 2;
  string remark = 3;
  bool status = 4;
}

message UpdateRoleInfo{
  int64 id = 1;
  string name = 2;
  string remark = 3;
  bool status = 4;
}

message RoleFilterPageInfo{
  common.PageInfo1 page_info = 1; // 分页参数
  string name = 2;
  string remark = 3;
  bool status = 4;
}

message RoleListResponse{
  int32 total = 1;
  repeated RoleInfoResponse data = 2;
}